[build-system]
requires = ["setuptools>=42", "wheel", "build>=0.7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "EvoloPy"
version = "4.0.6"
description = "An open source nature-inspired optimization toolbox with parallel processing capabilities"
readme = "README.md"
authors = [
    {name = "Hossam Faris", email = "hossam.faris@ju.edu.jo"},
]
maintainers = [
    {name = "Raneem Qaddoura", email = "raneem.qaddoura@gmail.com"},
    {name = "Jaber Jaber", email = "jaber2jabet@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["optimization", "meta-heuristic", "evolutionary", "swarm intelligence", "parallel", "gpu-accelerated"]
dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.0.0",
    "scipy>=1.5.0",
    "matplotlib>=3.3.0",
    "scikit-learn>=0.23.0",
    "psutil>=5.8.0",
]
requires-python = ">=3.6"

[project.optional-dependencies]
gpu = ["torch>=1.7.0"]

[project.urls]
Homepage = "https://github.com/7ossam81/EvoloPy"
"Bug Tracker" = "https://github.com/7ossam81/EvoloPy/issues"
"Source Code" = "https://github.com/7ossam81/EvoloPy"
"Contributors" = "https://github.com/7ossam81/EvoloPy/graphs/contributors"

[project.scripts]
evolopy = "EvoloPy.cli:run_cli"

[tool.setuptools]
packages = ["EvoloPy", "EvoloPy.optimizers"]

[tool.contributors]
"Jaber Jaber" = {github = "jaberjaber23", contribution = "Lead developer of parallel processing implementation for v3.0.0, including multi-core CPU and GPU acceleration"}

[tool.wheel]
name = "EvoloPy" 