[metadata]
name = EvoloPy
version = 3.0.0
author = EvoloPy Team
author_email = raneem.qaddoura@gmail.com
description = Implementation of meta-heuristic optimizers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/7ossam81/EvoloPy
project_urls = 
	Bug Tracker = https://github.com/7ossam81/EvoloPy/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .

[options.entry_points]
console_scripts = 
	evolopy = EvoloPy.cli:run_cli

[contributors]
Jaber Jaber (GitHub = @jaberjaber23) = Parallel processing implementation for v3.0.0

[egg_info]
tag_build = 
tag_date = 0

